# hepstats

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  bibliography.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_tests.txt  search.html  searchindex.js  setup.cfg  setup.py  test_simultaneous_fit.py  tox.ini  whats_new.html
.ci/: azure-manylinux-wheels.yml  azure-pipeline-build.yml  azure-setup.yml  azure-steps.yml  azure-tests.yml  azure_steps.yml  build-wheels.sh  environment.yml  environment_36.yml  macos-install-python.sh
.doctrees/: bibliography.doctree  environment.pickle  index.doctree  whats_new.doctree
.doctrees/api/: hepstats.doctree  hepstats.hypotests.calculators.asymptotic_calculator.doctree  hepstats.hypotests.calculators.basecalculator.doctree  hepstats.hypotests.calculators.doctree  hepstats.hypotests.calculators.frequentist_calculator.doctree  hepstats.hypotests.core.basetest.doctree  hepstats.hypotests.core.confidence_interval.doctree  hepstats.hypotests.core.discovery.doctree  hepstats.hypotests.core.doctree  hepstats.hypotests.core.upperlimit.doctree  hepstats.hypotests.doctree  hepstats.hypotests.exceptions.doctree  hepstats.hypotests.hypotests_object.doctree  hepstats.hypotests.parameters.doctree  hepstats.hypotests.toyutils.doctree  hepstats.modeling.bayesian_blocks.doctree  hepstats.modeling.doctree  hepstats.splot.doctree  hepstats.splot.exceptions.doctree  hepstats.splot.sweights.doctree  hepstats.splot.warnings.doctree  hepstats.utils.doctree  hepstats.utils.fit.api_check.doctree  hepstats.utils.fit.diverse.doctree  hepstats.utils.fit.doctree  hepstats.utils.fit.sampling.doctree  hepstats.version.doctree  hypotests.doctree  index.doctree  modeling.doctree  modules.doctree  splot.doctree  utils.doctree
.doctrees/getting_started/: hypotests.doctree  index.doctree  modeling.doctree  splot.doctree
.github/workflows/: main.yml
.tox/py27/: .tox-config1
.tox/py34/: .tox-config1
.tox/py35/: .tox-config1
.tox/py36/: .Python  .tox-config1
.tox/python/: .tox-config1
LICENSES/: LICENSE  LICENSE_ASTROML.rst
_modules/: index.html
_sources/: bibliography.rst.txt  index.rst.txt  whats_new.rst.txt
_sources/api/: hepstats.hypotests.calculators.frequentist_calculator.rst.txt  hepstats.hypotests.calculators.rst.txt  hepstats.hypotests.core.basetest.rst.txt  hepstats.hypotests.core.confidence_interval.rst.txt  hepstats.hypotests.hypotests_object.rst.txt  hepstats.hypotests.parameters.rst.txt  hepstats.hypotests.rst.txt  hepstats.hypotests.toyutils.rst.txt  hepstats.modeling.bayesian_blocks.rst.txt  hepstats.modeling.rst.txt  hepstats.rst.txt  hepstats.splot.exceptions.rst.txt  hepstats.splot.rst.txt  hepstats.splot.warnings.rst.txt  hepstats.utils.fit.diverse.rst.txt  hepstats.utils.fit.rst.txt  hepstats.utils.fit.sampling.rst.txt  hepstats.utils.rst.txt  splot.rst.txt
_sources/getting_started/: hypotests.rst.txt  index.rst.txt  splot.rst.txt
_static/: documentation_options.js
api/: hepstats.html  hepstats.hypotests.calculators.asymptotic_calculator.html  hepstats.hypotests.calculators.basecalculator.html  hepstats.hypotests.calculators.frequentist_calculator.html  hepstats.hypotests.calculators.html  hepstats.hypotests.core.basetest.html  hepstats.hypotests.core.confidence_interval.html  hepstats.hypotests.core.discovery.html  hepstats.hypotests.core.html  hepstats.hypotests.core.upperlimit.html  hepstats.hypotests.exceptions.html  hepstats.hypotests.html  hepstats.hypotests.hypotests_object.html  hepstats.hypotests.parameters.html  hepstats.hypotests.toyutils.html  hepstats.modeling.bayesian_blocks.html  hepstats.modeling.html  hepstats.splot.exceptions.html  hepstats.splot.html  hepstats.splot.sweights.html  hepstats.splot.warnings.html  hepstats.utils.fit.api_check.html  hepstats.utils.fit.diverse.html  hepstats.utils.fit.html  hepstats.utils.fit.sampling.html  hepstats.utils.html  hepstats.version.html  hypotests.html  index.html  modeling.html  modules.html  splot.html  utils.html
docs/: .buildinfo  Makefile  bibliography.rst  conf.py  genindex.html  index.html  index.rst  installation.html  make_docs.sh  objects.inv  py-modindex.html  quickstart.html  quickstart.md  requirements.txt  search.html  searchindex.js
docs/_images/: logo.xcf
docs/_modules/: index.html
docs/_sources/: index.rst.txt  installation.md.txt  quickstart.md.txt
docs/_static/: documentation_options.js
docs/api/: hepstats.html  hepstats.hypotests.calculators.asymptotic_calculator.rst  hepstats.hypotests.calculators.basecalculator.rst  hepstats.hypotests.core.discovery.rst  hepstats.hypotests.core.rst  hepstats.hypotests.core.upperlimit.rst  hepstats.hypotests.exceptions.rst  hepstats.splot.rst  hepstats.splot.sweights.rst  hepstats.splot.warnings.rst  hepstats.utils.fit.api_check.rst  hepstats.version.rst  hypotests.rst  index.rst  modeling.rst  modules.html  modules.rst  splot.rst  utils.rst
docs/bib/: references.bib
docs/doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/getting_started/: hypotests.rst  index.rst  modeling.rst  splot.rst
docs/images/: logo.xcf
docs/source/: conf.py  index.rst  references.bib
examples/hypotests/: discovery_asy_zfit.ipynb
examples/modeling/: bayesian_blocks.ipynb
getting_started/: hypotests.html  index.html  modeling.html  splot.html
hepstats/: version.py
hepstats/errors/: __init__.py  compute_errors.py
hepstats/hypotests/: README.md  __init__.py  exceptions.py  hypotests_object.py  parameters.py  toyutils.py
hepstats/modeling/: __init__.py  bayesian_blocks.py
hepstats/splot/: __init__.py  exceptions.py  sweights.py
hepstats/utils/: __init__.py
notebooks/: README.md
notebooks/hypotests/: FC_asy.ipynb  FC_freq.ipynb  FC_interval_asy.ipynb  FC_interval_freq.ipynb  Simultaneous_fit_discovery_splot.ipynb  (+12 more)
skstats/: version.py
tests/: conftest.py
(+341 files in other folders)
