[bdist_wheel]
universal=1

[metadata]
name = hepstats
author = Matthieu Marinangeli
author_email=matthieu.marinangeli@gmail.com
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
url = https://github.com/scikit-hep/hepstats
description = statistics tools and utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: C++
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src
install_requires =
    scipy
    numpy
    pandas
    asdf
    tqdm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-runner
    zfit
dev =
    zfit
    black==19.10b0
docs =
    sphinx>=3.1.2
    pydata_sphinx_theme
    sphinx_copybutton
;   fix for upstream bug: https://github.com/executablebooks/jupyter-book/issues/1137#issuecomment-743994864
    sphinxcontrib-bibtex<2.0.0
    matplotlib
    sphinx-autodoc-typehints

[options.packages.find]
where = src

[tool:pytest]
junit_family=xunit2
testpaths =
    tests

[check-manifest]
ignore =
    src/hepstats/version.py


[build_sphinx]
project = hepstats
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 0
