[metadata]
name = hepstats
description = statistics tools and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/hepstats
author = Matthieu Marinangeli
author_email = matthieu.marinangeli@gmail.com
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
install_requires =
    asdf
    numpy
    pandas
    scipy
    tqdm
    uhi
python_requires = >=3.9
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    %(docs)s
    %(test)s
    pre-commit
docs =
    matplotlib
    pydata-sphinx-theme
    sphinx>=3.1.2
    sphinx-autodoc-typehints
    sphinx-copybutton
    sphinxcontrib-bibtex>=2.0.0
test =
    pytest
    pytest-cov
    pytest-runner
    zfit>=0.20.0
zfit =
    zfit>=0.20.0

[tool:pytest]
junit_family = xunit2
testpaths =
    tests

[check-manifest]
ignore =
    src/hepstats/version.py

[build_sphinx]
project = hepstats
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 0
